fix per immagini layout

--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
                 <div class="row">
                     <div class="tile">
                         <img src="img/cure.jpeg" alt="">
-                        tile
+                        <div>tile</div>
+                        
                     </div>
                     <div class="tile">
-                        <img src="img/cure.jpeg" alt="">
-                        <div>a cure for welness</div>
                         tile
                     </div>
                     <div class="tile">
@@ -66,10 +65,10 @@
                 </h2>
                 <div class="row">
                     <div class="tile">
-                        tile
+                        <img src="img/cure.jpeg" alt="">
                     </div>
                     <div class="tile">
-                        tile
+                        <img src="img/cure.jpeg" alt="">
                     </div>
                     
                 </div>
