effetti hover banner e player

--- a/index.html
+++ b/index.html
@@ -86,13 +86,16 @@
 
         <main>
             <div class="banner">
-                <a class="button" href="">effettua l'upgrade</a>
+                <div class="button">
+                    <ahref="#">effettua l'upgrade</a>
+                </div>
                 
             </div>
+
             <section id="recently-played" class="padding-side">
                 <div class="secondary-nav">
                     <ul>
-                        <li><a href="#">In evidenza</a></li>
+                        <li><a class="active-btm" href="#">In evidenza</a></li>
                         <li><a href="#">Podcast</a></li>
                         <li><a href="#">Classifiche</a></li>
                         <li><a href="#">Generi e Mood</a></li>
@@ -225,7 +228,7 @@
                     Sinister
                 </div>
                 <div class="subtitle">
-                    Brano nome
+                    <a href="#">Brano nome</a>
                 </div>
 
             </div>
@@ -248,6 +251,7 @@
 
 
            <div class="progress-bar">
+
                 <div class="number-side-bar">
                     0:25
                 </div>
