--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- icon -->
     <script src="https://kit.fontawesome.com/e2fdc6941e.js" crossorigin="anonymous"></script>
@@ -111,7 +114,7 @@
                 <div class="row">
                     <div class="tile">
                         <div class="tile-img">
-                            <img src="img/cure.jpeg" alt="">
+                            <img src="img/metal_lifting.jpg" alt="">
                             <span><i class="fa-regular fa-circle-play"></i></span>
 
                         </div>
@@ -198,7 +201,7 @@
             </section>
             <section id="create-for-you" class="padding-side">
                 <h2>
-                    Creato per Jhon Doe
+                    Creato per John Doe
                 </h2>
                 <div class="subtitle">
                     Più ascolti, più accurati saranno i suggerimenti
@@ -217,8 +220,8 @@
                     </div>
                     <div class="tile">
                         <div class="tile-img">
-                            <span><i class="fa-regular fa-circle-play"></i></span>
                             <img src="img/mixdaily.jpeg" alt="">
+                            <span><i class="fa-regular fa-circle-play"></i></span>
 
                         </div>
                         <div class="title">
@@ -292,8 +295,10 @@
                 </div>
                 <div class="volume-bar">
                     <div class="border-bar">
-                        <div class="circle-bar"></div>
-                        <div class="played-bar"></div>
+                        <div class="played-bar">
+                            <div class="circle-bar"></div>
+
+                        </div>
                     </div>
                     
                 </div>
@@ -310,8 +315,10 @@
             <span class="icons"><i class="fa-solid fa-volume-high"></i></span>
             <div class="volume-bar">
                 <div class="border-bar">
-                    <div class="circle-bar"></div>
-                    <div class="played-bar"></div>
+                    <div class="played-bar">
+                        <div class="circle-bar"></div>
+
+                    </div>
                 </div>
 
             </div>
